[project]
name = "ainamuse"
version = "0.1.0"
description = "A comprehensive Flet (Python) utility for musicians to calculate capo frets, keyboard transpositions, and view dynamic guitar chord diagrams."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ainadigit", email = "shellinopierre@gmail.com" }
]
dependencies = [
    "flet>=0.83.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.83.0",
]

[tool.flet]
org = "com.ainadigit"
product = "ainamuse"
company = "Ainadigit"
copyright = "Copyright (C) 2023-2026 by Ainadigit"

[tool.flet.app]
path = "src"

[tool.flet.android]
# Ces lignes aident Android à identifier correctement le package
build_number = 1
permissions = ["INTERNET"]
